fixed alignment

--- a/AlannaJ/week_4/my.css
+++ b/AlannaJ/week_4/my.css
@@ -63,7 +63,8 @@ em 	{
 	float:right;
 }
 .holder 		{
-	background-color: transparent;	
+	background-color: transparent;
+	display:flex;
 }
 .top 	{
 	margin: 10px;
